add support for podmomitor
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/service.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.serviceMonitor.enabled }}
+{{- if .Values.service.enabled }}
 kind: Service
 apiVersion: v1
 metadata:
@@ -20,7 +20,6 @@ spec:
   ports:
     - name: {{ .Values.service.metricsPort.name }}
       port: {{ .Values.service.httpPort }}
-      targetPort: {{ .Values.deployment.metricsPort.name }}
       protocol: TCP
   selector:
     app: {{ template "elasticsearch-exporter.name" . }}
