--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -71,6 +71,7 @@ affinity: {}
 initContainers: []
 
 service:
+  enabled: true
   type: ClusterIP
   httpPort: 9108
   metricsPort:
@@ -254,7 +255,7 @@ serviceMonitor:
   sampleLimit: 0
 
 podMonitor:
-  ## If true, a PodMonitor CRD is created for a prometheus operator
+  ## If true, a PodMonitor CRD is created for a Prometheus Operator
   ## https://github.com/coreos/prometheus-operator
   ##
   enabled: false
