--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -134,7 +134,7 @@ spec:
                     {{- range .Values.extraArgs }}
                     {{ . | quote }},
                     {{- end }}
-                    "--web.listen-address=:{{ .Values.deployment.httpPort }}",
+                    "--web.listen-address=:{{ .Values.servicehttpPort }}",
                     "--web.telemetry-path={{ .Values.web.path }}"]
           {{- with .Values.securityContext }}
           securityContext:
@@ -145,19 +145,19 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
-            - containerPort: {{ .Values.deployment.httpPort }}
-              name: {{ .Values.deployment.metricsPort.name }}
+            - containerPort: {{ .Values.service.httpPort }}
+              name: {{ .Values.service.metricsPort.name }}
           livenessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.deployment.metricsPort.name }}
+              port: {{ .Values.service.metricsPort.name }}
             initialDelaySeconds: 5
             timeoutSeconds: 5
             periodSeconds: 5
           readinessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.deployment.metricsPort.name }}
+              port: {{ .Values.service.metricsPort.name }}
             initialDelaySeconds: 1
             timeoutSeconds: 5
             periodSeconds: 5
