add support for podmomitor
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -134,7 +134,7 @@ spec:
                     {{- range .Values.extraArgs }}
                     {{ . | quote }},
                     {{- end }}
-                    "--web.listen-address=:{{ .Values.servicehttpPort }}",
+                    "--web.listen-address=:{{ .Values.service.httpPort }}",
                     "--web.telemetry-path={{ .Values.web.path }}"]
           {{- with .Values.securityContext }}
           securityContext:
