[kube-prometheus-stack] support custom for and severity rules
Signed-off-by: Christian Körner <ck@ps-xaf.de>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -40,7 +40,7 @@ customRules: {}
   #   for: 3m
   # AlertmanagerMembersInconsistent:
   #   for: 5m
-  #   labelsSeverity: "warning"
+  #   severity: "warning"
 
 ## Create default rules for monitoring the cluster
 ##
