--- a/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml
@@ -24,6 +24,9 @@ spec:
   podMetricsEndpoints:
   - path: {{ .Values.web.path }}
     port: {{ .Values.deployment.metricsPort.name }}
+  {{- if .Values.podMonitor.scheme }}
+    scheme: {{ .Values.podMonitor.scheme }}
+  {{- end }}
   {{- if .Values.podMonitor.interval }}
     interval: {{ .Values.podMonitor.interval }}
   {{- end }}
