--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -274,6 +274,8 @@ serviceMonitor:
     path: /metrics
     interval: 30s
     scrapeTimeout: 30s
+    ## Port can be defined by assigning a value for the port key below
+    ## port:                  
 
   ## If true, a ServiceMonitor CRD is created for a prometheus operator
   ## https://github.com/coreos/prometheus-operator for each target
