--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -258,6 +258,7 @@ podMonitor:
   ## https://prometheus-operator.dev/docs/operator/api/#monitoring.coreos.com/v1.PodMonitor
   ##
   enabled: false
+  namespace: ""
   labels: {}
   interval: 60s
   scrapeTimeout: 10s
