[prometheus-elasticsearch-exporter] add support for podmonitor (#4264)
* [prometheus-elasticsearch-exporter] Add PodMonitor support

Signed-off-by: ShlomiTubul <shlomi.tubul@placer.ai>

* [prometheus-elasticsearch-exporter] revert deafult values,bump version

Signed-off-by: ShlomiTubul <shlomi.tubul@placer.ai>

* add support for podmomitor

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* add support for podmomitor

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* add support for podmomitor

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/templates/podmonitor.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

* CR comments

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* remove job label

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* Update charts/prometheus-elasticsearch-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

---------

Signed-off-by: ShlomiTubul <shlomi.tubul@placer.ai>
Signed-off-by: drfaust92 <il

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -71,6 +71,7 @@ affinity: {}
 initContainers: []
 
 service:
+  enabled: true
   type: ClusterIP
   httpPort: 9108
   metricsPort:
@@ -81,6 +82,8 @@ service:
 deployment:
   annotations: {}
   labels: {}
+  metricsPort:
+    name: http
 
 ## Extra environment variables that will be passed into the exporter pod
 ## example:
@@ -249,6 +252,20 @@ serviceMonitor:
   targetLabels: []
   metricRelabelings: []
   sampleLimit: 0
+
+podMonitor:
+  ## If true, a PodMonitor CRD is created for a Prometheus Operator
+  ## https://prometheus-operator.dev/docs/operator/api/#monitoring.coreos.com/v1.PodMonitor
+  ##
+  enabled: false
+  namespace: ""
+  labels: {}
+  interval: 60s
+  scrapeTimeout: 10s
+  honorLabels: true
+  scheme: http
+  relabelings: []
+  metricRelabelings: []
 
 prometheusRule:
   ## If true, a PrometheusRule CRD is created for a prometheus operator
