[prometheus-rabbitmq-exporter] Allows reading User from secret
Currently the exporter allows using password from secret.
This patch allows users to read username from secret as well.
This is used in cases where automated username is created during
install process of rabbitmq service.

Signed-off-by: Sulochan Acharya <sulochan@gmail.com>

--- a/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
+++ b/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
@@ -59,8 +59,13 @@ spec:
               - name: RABBIT_PASSWORD
                 value: {{ .Values.rabbitmq.password }}
            {{- end }}
-
-           {{- if .Values.rabbitmq.user }}
+           {{- if .Values.rabbitmq.existingUserSecret }}
+              - name: RABBIT_USER
+                valueFrom:
+                  secretKeyRef:
+                    name: "{{ .Values.rabbitmq.existingUserSecret }}"
+                    key: "{{ .Values.rabbitmq.existingUserSecretKey }}"
+           {{- else if .Values.rabbitmq.user }}
               - name: RABBIT_USER
                 value: {{ .Values.rabbitmq.user }}
            {{- end }}
