--- a/charts/prometheus-rabbitmq-exporter/values.yaml
+++ b/charts/prometheus-rabbitmq-exporter/values.yaml
@@ -39,6 +39,9 @@ rabbitmq:
   url: http://myrabbit:15672
   user: guest
   password: guest
+  # If existingUserSecret is set then user is ignored
+  existingUserSecret: ~
+  existingUserSecretKey: username
   # If existingPasswordSecret is set then password is ignored
   existingPasswordSecret: ~
   existingPasswordSecretKey: password
