[prometheus-node-exporter] Remove new lines within action
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -176,14 +176,8 @@ spec:
               mountPath: {{ .mountPath }}
             {{- end }}
         {{- range .Values.sidecars }}
-          {{- $overwrites := dict 
-            "volumeMounts" (concat (include "prometheus-node-exporter.sidecarVolumeMounts" $ | fromYamlArray) (.volumeMounts | default list) | default list)
-          }}
-          {{- $defaults := dict 
-            "image" (include "prometheus-node-exporter.image" $) 
-            "securityContext" $.Values.containerSecurityContext 
-            "imagePullPolicy" $.Values.image.pullPolicy 
-          }}
+          {{- $overwrites := dict "volumeMounts" (concat (include "prometheus-node-exporter.sidecarVolumeMounts" $ | fromYamlArray) (.volumeMounts | default list) | default list) }}
+          {{- $defaults := dict "image" (include "prometheus-node-exporter.image" $) "securityContext" $.Values.containerSecurityContext "imagePullPolicy" $.Values.image.pullPolicy }}
         - {{- toYaml (merge $overwrites . $defaults) | nindent 10 }}
         {{- end }}
         {{-  if .Values.kubeRBACProxy.enabled  }}
