--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -146,7 +146,8 @@ configmapReload:
 # A service monitor will be created per each item in serviceMonitor.params[]
 serviceMonitor:
   enabled: false
-  namespace: ""
+  # Default value is the namespace the release is deployed to
+  # namespace: monitoring
 
   path: /snmp
 
