[kube-prometheus-stack] fix CI
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1017,6 +1017,10 @@ grafana:
   #   finalizers:
   #     - kubernetes.io/pvc-protection
 
+  serviceAccount:
+    create: true
+    autoMount: true
+
   sidecar:
     dashboards:
       enabled: true
