--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -9,7 +9,8 @@ command: []
 
 imagePullSecrets: []
 
-labels: {}
+# Additional labels for deployment
+deploymentLabels: {}
 
 global:
   # To help compatibility with other charts which use global.imagePullSecrets.
@@ -128,6 +129,7 @@ prometheus:
     #   replacement: $1
     #   action: replace
 
+# Additional labels for pod
 podLabels: {}
 
 resources: {}
