--- a/charts/prometheus-kafka-exporter/templates/service.yaml
+++ b/charts/prometheus-kafka-exporter/templates/service.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "prometheus-kafka-exporter.fullname" . }}
-  annotations:
-{{ toYaml .Values.service.annotations | indent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations: {{ toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     app: {{ template "prometheus-kafka-exporter.name" . }}
     chart: {{ template "prometheus-kafka-exporter.chart" . }}
