--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -9,6 +9,9 @@ command: []
 
 imagePullSecrets: []
 
+# Additional labels for deployment
+deploymentLabels: {}
+
 global:
   # To help compatibility with other charts which use global.imagePullSecrets.
   # Allow either an array of {name: pullSecret} maps (k8s-style), or an array of strings (more common helm-style).
@@ -126,6 +129,9 @@ prometheus:
     #   replacement: $1
     #   action: replace
 
+# Additional labels for pod
+podLabels: {}
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -140,6 +146,7 @@ resources: {}
 
 nodeSelector: {}
 
+# Annotations to attach to pod
 annotations: {}
 
 tolerations: []
