--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,7 @@
 * @prometheus-community/helm-charts-admins
 
 /.github/workflows/ @prometheus-community/helm-charts-admins @jkroepke @GMartinez-Sisti
-/renovate.json @prometheus-community/helm-charts-admins @jkroepke @GMartinez-Sisti
+/renovate.json @prometheus-community/helm-charts-admins @jkroepke
 
 /charts/alertmanager/ @monotek @naseemkullah
 /charts/alertmanager-snmp-notifier/ @maxwo
