feat(prometheus-blackbox-exporter): add deployment annotations
This enables setting annotations for the deployment.

Signed-off-by: Maurice Meyer <mmeyer@anaconda.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -246,6 +246,9 @@ ingress:
 
 podAnnotations: {}
 
+# Annotations for the Deployment
+deploymentAnnotations: {}
+
 # Hostaliases allow to add additional DNS entries to be injected directly into pods.
 # This will take precedence over your implemented DNS solution
 hostAliases: []
