--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1025,6 +1025,9 @@ grafana:
       # Allow discovery in all namespaces for dashboards
       searchNamespace: ALL
 
+      # Support for new table panels (in case, grafana auto migrate the table-old panels to table panels)
+      enableNewTablePanelSyntax: false
+
       ## Annotations for Grafana dashboard configmaps
       ##
       annotations: {}
