--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitor.yaml
@@ -48,6 +48,9 @@ spec:
     {{- if .Values.prometheus.serviceMonitor.scheme }}
     scheme: {{ .Values.prometheus.serviceMonitor.scheme }}
     {{- end }}
+    {{- if .Values.prometheus.serviceMonitor.tlsConfig }}
+    tlsConfig: {{- toYaml .Values.prometheus.serviceMonitor.tlsConfig | nindent 6 }}
+    {{- end }}
     path: "/metrics"
     {{- if .Values.prometheus.serviceMonitor.metricRelabelings }}
     metricRelabelings: {{- tpl (toYaml .Values.prometheus.serviceMonitor.metricRelabelings | nindent 6) . }}
