[prometheus-snmp-exporter] Add extraVolumes support and passing auth param (#4043)
* feat(prometheus-snmp-exporter): add extraVolumes and upgrade version

Signed-off-by: tr3mor <storozhenkopf@gmail.com>

* feat(prometheus-snmp-exporter): add auth support

Signed-off-by: tr3mor <storozhenkopf@gmail.com>

* feat(prometheus-snmp-exporter): add auth support

Signed-off-by: tr3mor <storozhenkopf@gmail.com>

* feat(prometheus-snmp-exporter): add auth support

Signed-off-by: Pavel Storozhenko <storozhenkopf@gmail.com>

---------

Signed-off-by: tr3mor <storozhenkopf@gmail.com>
Signed-off-by: Pavel Storozhenko <storozhenkopf@gmail.com>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -58,6 +58,12 @@ extraSecretMounts: []
   #   readOnly: true
   #   defaultMode: 420
 
+# Additional volumes, e.g. for secrets used in an extraContainer
+extraVolumes: []
+
+# Additional volume mounts for snmp-exporter container
+extraVolumeMounts: []
+
 ## For RBAC support:
 rbac:
   # Specifies whether RBAC resources should be created
@@ -187,6 +193,9 @@ serviceMonitor:
     # Module used for scraping. Overrides value set in serviceMonitor.module
     #   module:
     #     - if_mib
+    # Auth used for scraping.
+    #   auth:
+    #     - test-auth
     # Map of labels for ServiceMonitor. Overrides value set in serviceMonitor.selector
     #   labels: {}
           # release: kube-prometheus-stack
