--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2756,6 +2756,14 @@ prometheusOperator:
   ##
   automountServiceAccountToken: true
 
+  ## Additional volumes
+  ##
+  extraVolumes: []
+
+  ## Additional volume mounts
+  ##
+  extraVolumeMounts: []
+
 ## Deploy a Prometheus instance
 ##
 prometheus:
