Defined metricRelabelings in selfservicemonitor.yaml
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
@@ -19,6 +19,10 @@ spec:
     {{- with .Values.serviceMonitor.selfMonitor.port }}
     port: {{ . }}
     {{- end }}
+    {{- if .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels }}
+    metricRelabelings:
+      {{- toYaml .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels | nindent 6 }}
+    {{- end }}
     {{- if .Values.serviceMonitor.selfMonitor.additionalRelabeling }}
     relabelings:
       {{- toYaml .Values.serviceMonitor.selfMonitor.additionalRelabeling | nindent 6 }}
