--- a/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
@@ -168,7 +168,7 @@ spec:
             secretName: {{ template "kube-prometheus-stack.fullname" . }}-admission
         {{- end }}
         {{- with .Values.prometheusOperator.extraVolumes }}
-        {{ toYaml . | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
     {{- with .Values.prometheusOperator.dnsConfig }}
       dnsConfig:
