[kube-prometheus-stackk] add - in front of toYaml
Signed-off-by: emilkor1 <emilkordahl@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
@@ -158,7 +158,7 @@ spec:
               readOnly: true
           {{- end }}
           {{- with .Values.prometheusOperator.extraVolumeMounts }}
-          {{ toYaml . | nindent 12 }}
+          {{- toYaml . | nindent 12 }}
           {{- end }}
       volumes:
         {{- if .Values.prometheusOperator.tls.enabled }}
