ci(chart-tester): group logs
Signed-off-by: Gabriel Martinez <gabrielmartinez@sisti.pt>

--- a/.github/linters/ct.yaml
+++ b/.github/linters/ct.yaml
@@ -7,6 +7,7 @@ chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
   - grafana=https://grafana.github.io/helm-charts
   - prometheus-community=https://prometheus-community.github.io/helm-charts
+github-groups: true
 helm-extra-args: --timeout 600s
 excluded-charts:
   # If not running on GCE, will error: "Failed to get GCE config"
