Change SNMP exporter configmap-reload image to quay.io
Signed-off-by: Mohammadreza Tavakoli <mohammadrezatavakoli99@gmail.com>
Signed-off-by: mrt <mr.tavakoli@alibaba.ir>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -139,8 +139,8 @@ configmapReload:
   ## configmap-reload container image
   ##
   image:
-    repository: jimmidyson/configmap-reload
-    tag: v0.5.0
+    repository: quay.io/prometheus-operator/prometheus-config-reloader
+    tag: v0.71.2
     pullPolicy: IfNotPresent
 
   ## configmap-reload resource requests and limits
