fix(snmp-exporter): use quay as default repository
We should not be using Dockerhub when these images are available on quay, this will make it more consistent with the other images from the other charts in this Helm repo.

Signed-off-by: Devin Buhl <onedr0p@users.noreply.github.com>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -3,7 +3,7 @@ restartPolicy: Always
 kind: Deployment
 
 image:
-  repository: prom/snmp-exporter
+  repository: quay.io/prometheus/snmp-exporter
   # if not set appVersion field from Chart.yaml is used
   tag: ""
   pullPolicy: IfNotPresent
