--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1033,7 +1033,7 @@ grafana:
       # Allow discovery in all namespaces for dashboards
       searchNamespace: ALL
 
-      # Support for new table panels (in case, grafana auto migrate the table-old panels to table panels)
+      # Support for new table panels, when enabled grafana auto migrates the old table panels to newer table panels
       enableNewTablePanelSyntax: false
 
       ## Annotations for Grafana dashboard configmaps
