[kube-prometheus-stack] Conditionally support new table panels (#4297)
Co-authored-by: Gabriel Martinez <19713226+GMartinez-Sisti@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1033,6 +1033,9 @@ grafana:
       # Allow discovery in all namespaces for dashboards
       searchNamespace: ALL
 
+      # Support for new table panels, when enabled grafana auto migrates the old table panels to newer table panels
+      enableNewTablePanelSyntax: false
+
       ## Annotations for Grafana dashboard configmaps
       ##
       annotations: {}
