[prometheus-mysql-exporter] Add priorityClassName

--- a/charts/prometheus-mysql-exporter/templates/deployment.yaml
+++ b/charts/prometheus-mysql-exporter/templates/deployment.yaml
@@ -29,6 +29,9 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ template "prometheus-mysql-exporter.serviceAccountName" . }}
+      {{- with .Values.priorityClassName }}
+      priorityClassName: {{ . }}
+      {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- if and .Values.imagePullSecrets }}
