--- a/charts/prometheus-mysql-exporter/values.yaml
+++ b/charts/prometheus-mysql-exporter/values.yaml
@@ -90,6 +90,8 @@ affinity: {}
 
 podLabels: {}
 
+priorityClassName: ""
+
 # Extra Volume Mounts for the mysql exporter container
 extraVolumeMounts: []
 # - name: example
