[prometheus-mysql-exporter] Fix typo
Signed-off-by: jkrusy <krusy@babymarkt.de>

--- a/charts/prometheus-mysql-exporter/values.yaml
+++ b/charts/prometheus-mysql-exporter/values.yaml
@@ -90,7 +90,7 @@ affinity: {}
 
 podLabels: {}
 
-priorityClassName: """
+priorityClassName: ""
 
 # Extra Volume Mounts for the mysql exporter container
 extraVolumeMounts: []
