Allow setting selectors for built-in ServiceMonitors
This will make it easier to install the chart in environments where
resources cannot be created in the kube-system namespace, such as a
tightly scoped ArgoCD AppProject.

Without this change, to use the built-in ServiceMonitors with
service.enabled=false, the operator is expected to create services in
the kube-system namespace that have labels that exactly match what the
chart is expecting.

With this change, I can create these service resources with my own
naming conventions and labels, and inform the ServiceMonitor on how to
select them.

Signed-off-by: Andrew Titmuss <iandrewt@icloud.com>

--- a/charts/kube-prometheus-stack/templates/exporters/kube-etcd/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-etcd/servicemonitor.yaml
@@ -15,12 +15,16 @@ metadata:
   {{- end }}
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
-  jobLabel: jobLabel
+  jobLabel: {{ .Values.kubeEtcd.serviceMonitor.jobLabel }}
   {{- include "servicemonitor.scrapeLimits" .Values.kubeEtcd.serviceMonitor | nindent 4 }}
   selector:
+    {{- if .Values.kubeEtcd.serviceMonitor.selector }}
+    {{ tpl (toYaml .Values.kubeEtcd.serviceMonitor.selector | nindent 4) . }}
+    {{- else }}
     matchLabels:
       app: {{ template "kube-prometheus-stack.name" . }}-kube-etcd
       release: {{ $.Release.Name | quote }}
+    {{- end }}
   namespaceSelector:
     matchNames:
       - "kube-system"
