--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -54,7 +54,7 @@ coreDns:
   serviceMonitor:
     selector:
       matchLabels:
-        k8s-app: kube-dns
+        k8s-app: '{{ $.Release.Name }}'
 kubeEtcd:
   service:
     enabled: false
