--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -40,3 +40,39 @@ customRules:
   AlertmanagerMembersInconsistent:
     for: 5m
     severity: "warning"
+
+kubeControllerManager:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        component: kube-controller-manager
+coreDns:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        k8s-app: '{{ $.Release.Name }}'
+kubeEtcd:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        component: etcd
+kubeScheduler:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        component: kube-scheduler
+kubeProxy:
+  service:
+    enabled: false
+  serviceMonitor:
+    selector:
+      matchLabels:
+        k8s-app: kube-proxy
