[prometheus-snmp-exporter] Add optional auth section (#4020)
* SNMP Exporter: Add optional auth section

Signed-off-by: Brian Milco <bcmilco@gmail.com>

* SNMP Exporter: update version

Signed-off-by: Brian Milco <bcmilco@gmail.com>

* SNMP Exporter: remove redundant auth section

Signed-off-by: Brian Milco <bcmilco@gmail.com>

---------

Signed-off-by: Brian Milco <bcmilco@gmail.com>
Signed-off-by: Brian Milco <brian.milco@protonmail.com>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -162,6 +162,9 @@ serviceMonitor:
   scrapeTimeout: 10s
   module:
     - if_mib
+  # Auth used for scraping.
+  auth:
+    - public_v2
 
   # Relabelings dynamically rewrite the label set of a target before it gets scraped.
   # Set if defined unless overriden by params.relabelings.
@@ -193,9 +196,6 @@ serviceMonitor:
     # Module used for scraping. Overrides value set in serviceMonitor.module
     #   module:
     #     - if_mib
-    # Auth used for scraping.
-    #   auth:
-    #     - test-auth
     # Map of labels for ServiceMonitor. Overrides value set in serviceMonitor.selector
     #   labels: {}
           # release: kube-prometheus-stack
