Allow changing port name of built-in ServiceMonitors
Following on from #4312, I found while trying to use the built-in
kube-dns service instead of just a custom externally-managed one for
scraping metrics that the default configuration calls the metrics port
metrics, not http-metrics like the chart expects.

This change allows overriding this value for all the built-in
ServiceMonitors that create Services, and setting it will change the
port name for the Helm managed services to ensure setting it without
using custom Services continues to work.

Signed-off-by: Andrew Titmuss <andrew.titmuss@ubank.com.au>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -52,6 +52,7 @@ coreDns:
   service:
     enabled: false
   serviceMonitor:
+    port: metrics
     selector:
       matchLabels:
         k8s-app: '{{ $.Release.Name }}'
