--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1486,6 +1486,10 @@ kubeControllerManager:
     ##
     proxyUrl: ""
 
+    ## port: Name of the port the metrics will be scraped from
+    ##
+    port: http-metrics
+
     jobLabel: jobLabel
     selector: {}
     #  matchLabels:
@@ -1566,6 +1570,10 @@ coreDns:
     ## proxyUrl: URL of a proxy that should be used for scraping.
     ##
     proxyUrl: ""
+
+    ## port: Name of the port the metrics will be scraped from
+    ##
+    port: http-metrics
 
     jobLabel: jobLabel
     selector: {}
@@ -1754,6 +1762,10 @@ kubeEtcd:
     certFile: ""
     keyFile: ""
 
+    ## port: Name of the port the metrics will be scraped from
+    ##
+    port: http-metrics
+
     jobLabel: jobLabel
     selector: {}
     #  matchLabels:
@@ -1842,6 +1854,10 @@ kubeScheduler:
     ##
     https: null
 
+    ## port: Name of the port the metrics will be scraped from
+    ##
+    port: http-metrics
+
     jobLabel: jobLabel
     selector: {}
     #  matchLabels:
@@ -1925,6 +1941,10 @@ kubeProxy:
     ## proxyUrl: URL of a proxy that should be used for scraping.
     ##
     proxyUrl: ""
+
+    ## port: Name of the port the metrics will be scraped from
+    ##
+    port: http-metrics
 
     jobLabel: jobLabel
     selector: {}
