Allow changing the reloader web port in the Prometheus Service
Signed-off-by: svetlimladenov <svetlimladenov@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2972,6 +2972,10 @@ prometheus:
     ## To be used with a proxy extraContainer port
     targetPort: 9090
 
+    ## Port for Prometheus Reloader to listen on
+    ##
+    reloaderWebPort: 8080
+
     ## List of IP addresses at which the Prometheus server service is available
     ## Ref: https://kubernetes.io/docs/user-guide/services/#external-ips
     ##
