Allow deploy of node-exporter dashboards when dependency disabled
I've got node-exporter deployed seperately so it shows as an independent
app in Argo CD and so I can manage its upgrades independently, but since
its default dashboards are managed by the kube-prometheus-stack chart,
I don't get the node-exporter dashboards anymore.

This change allows forcing the deploy of the node-exporter dashboards,
as long as the other conditions for deploying Grafana dashboards are
met.

Signed-off-by: Andrew Titmuss <andrew.titmuss@ubank.com.au>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -77,3 +77,7 @@ kubeProxy:
     selector:
       matchLabels:
         k8s-app: kube-proxy
+
+nodeExporter:
+  enabled: false
+  forceDeployDashboards: true
