--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -66,6 +66,13 @@ kubeRBACProxy:
   # Configure a hostPort. If true, hostPort will be enabled in the container and set to service.port.
   enableHostPort: false
 
+  # Configure Proxy Endpoints Port
+  proxyEndpointsPort: 8888
+  # Specify the port to be used for the http-healthz containerPort
+  healthzPort: 8888
+  # Configure a hostPort for the http-healthz containerPort. If true, hostPort will be enabled in the container and set to the healthzPort value.
+  enableHealthzHostPort: false
+
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
