[kube-prometheus-stack] Add resources and SLIs metrics support
- KEP-1748: Expose Pod Resource Request Metrics
  - kube-scheduler
- KEP-3466: Kubernetes Component SLIs
  - kube-apiserver
  - kubelet
  - kube-controller-manager
  - kube-scheduler
  - kube-proxy

Signed-off-by: Mitsuru Kariya <mitsuru.kariya@nttdata.com>

--- a/charts/kube-prometheus-stack/templates/exporters/kube-scheduler/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-scheduler/servicemonitor.yaml
@@ -29,31 +29,13 @@ spec:
     matchNames:
       - "kube-system"
   endpoints:
-  - port: {{ .Values.kubeScheduler.serviceMonitor.port }}
-    {{- if .Values.kubeScheduler.serviceMonitor.interval }}
-    interval: {{ .Values.kubeScheduler.serviceMonitor.interval }}
-    {{- end }}
-    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    {{- if .Values.kubeScheduler.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubeScheduler.serviceMonitor.proxyUrl}}
-    {{- end }}
-    {{- if eq (include "kube-prometheus-stack.kubeScheduler.insecureScrape" (list . false true .Values.kubeScheduler.serviceMonitor.https )) "true" }}
-    scheme: https
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      {{- if eq (include "kube-prometheus-stack.kubeScheduler.insecureScrape" (list . nil true .Values.kubeScheduler.serviceMonitor.insecureSkipVerify)) "true" }}
-      insecureSkipVerify: true
-      {{- end }}
-      {{- if .Values.kubeScheduler.serviceMonitor.serverName }}
-      serverName: {{ .Values.kubeScheduler.serviceMonitor.serverName }}
-      {{- end}}
-    {{- end}}
-{{- if .Values.kubeScheduler.serviceMonitor.metricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubeScheduler.serviceMonitor.metricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubeScheduler.serviceMonitor.relabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubeScheduler.serviceMonitor.relabelings | indent 4) . }}
-{{- end }}
+  {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "") }}
+  {{- if .Values.kubeScheduler.serviceMonitor.slis }}
+  {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "slis") }}
+    path: /metrics/slis
+  {{- end }}
+  {{- if .Values.kubeScheduler.serviceMonitor.resources }}
+  {{- include "kube-prometheus-stack.kubeScheduler.endpoint" (list $ "resources") }}
+    path: /metrics/resources
+  {{- end }}
 {{- end }}
