--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1230,6 +1230,23 @@ kubeApiServer:
     # - targetLabel: __address__
     #   replacement: kubernetes.default.svc:443
 
+    ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    slis: false
+
+    ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisMetricRelabelings: []
+
+    ## SLIs RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
+
     ## Additional labels
     ##
     additionalLabels: {}
@@ -1302,6 +1319,10 @@ kubelet:
     resource: false
     # From kubernetes 1.18, /metrics/resource/v1alpha1 renamed to /metrics/resource
     resourcePath: "/metrics/resource/v1alpha1"
+
+    ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis) from kubelet's service
+    ##
+    slis: false
 
     ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
@@ -1430,6 +1451,20 @@ kubelet:
     #   replacement: $1
     #   action: replace
 
+    ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisMetricRelabelings: []
+
+    ## SLIs RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
+
     ## Additional labels
     ##
     additionalLabels: {}
@@ -1528,6 +1563,23 @@ kubeControllerManager:
     #   targetLabel: nodename
     #   replacement: $1
     #   action: replace
+
+    ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    slis: false
+
+    ## SLIs MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisMetricRelabelings: []
+
+    ## SLIs RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
 
     ## Additional labels
     ##
@@ -1891,6 +1943,40 @@ kubeScheduler:
     #   replacement: $1
     #   action: replace
 
+    ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    slis: false
+
+    ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisMetricRelabelings: []
+
+    ## RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
+
+    ## Enable scraping resources metrics (/metrics/resources)
+    resources: false
+
+    ## resources MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    resourcesMetricRelabelings: []
+
+    ## resources RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    resourcesRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
+
     ## Additional labels
     ##
     additionalLabels: {}
@@ -1974,6 +2060,23 @@ kubeProxy:
     # - action: keep
     #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
     #   sourceLabels: [__name__]
+
+    ## Enable scraping Service Level Indicator (SLI) metrics (/metrics/slis)
+    slis: false
+
+    ## MetricRelabelConfigs to apply to samples after scraping, but before ingestion.
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisMetricRelabelings: []
+
+    ## RelabelConfigs to apply to samples before scraping
+    ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
+    ##
+    slisRelabelings:
+      - sourceLabels: [__metrics_path__]
+        targetLabel: metrics_path
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   targetLabel: nodename
 
     ## Additional labels
     ##
