--- a/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kube-api-server/servicemonitor.yaml
@@ -17,27 +17,11 @@ metadata:
 spec:
   {{- include "servicemonitor.scrapeLimits" .Values.kubeApiServer.serviceMonitor | nindent 2 }}
   endpoints:
-  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    {{- if .Values.kubeApiServer.serviceMonitor.interval }}
-    interval: {{ .Values.kubeApiServer.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubeApiServer.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubeApiServer.serviceMonitor.proxyUrl }}
-    {{- end }}
-    port: https
-    scheme: https
-{{- if .Values.kubeApiServer.serviceMonitor.metricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubeApiServer.serviceMonitor.metricRelabelings | indent 6) . }}
-{{- end }}
-{{- if .Values.kubeApiServer.serviceMonitor.relabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubeApiServer.serviceMonitor.relabelings | indent 6) . }}
-{{- end }}
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      serverName: {{ .Values.kubeApiServer.tlsConfig.serverName }}
-      insecureSkipVerify: {{ .Values.kubeApiServer.tlsConfig.insecureSkipVerify }}
+  {{- include "kube-prometheus-stack.kubeApiServer.endpoint" (list $ "") }}
+  {{- if .Values.kubeApiServer.serviceMonitor.slis }}
+  {{- include "kube-prometheus-stack.kubeApiServer.endpoint" (list $ "slis") }}
+    path: /metrics/slis
+  {{- end }}
   jobLabel: {{ .Values.kubeApiServer.serviceMonitor.jobLabel }}
   namespaceSelector:
     matchNames:
