--- a/charts/kube-prometheus-stack/templates/exporters/kubelet/servicemonitor.yaml
+++ b/charts/kube-prometheus-stack/templates/exporters/kubelet/servicemonitor.yaml
@@ -21,206 +21,22 @@ spec:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   endpoints:
-  {{- if .Values.kubelet.serviceMonitor.https }}
-  - port: https-metrics
-    scheme: https
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      insecureSkipVerify: true
-    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-{{- if .Values.kubelet.serviceMonitor.metricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.relabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.relabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.cAdvisor }}
-  - port: https-metrics
-    scheme: https
+  {{- include "kube-prometheus-stack.kubelet.endpoint" (list $ "") }}
+  {{- if .Values.kubelet.serviceMonitor.cAdvisor }}
+  {{- include "kube-prometheus-stack.kubelet.endpoint" (list $ "cAdvisor") }}
     path: /metrics/cadvisor
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      insecureSkipVerify: true
-    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-{{- if .Values.kubelet.serviceMonitor.cAdvisorMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.cAdvisorMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.cAdvisorRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.cAdvisorRelabelings | indent 4) . }}
-{{- end }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.probes }}
-  - port: https-metrics
-    scheme: https
+  {{- end }}
+  {{- if .Values.kubelet.serviceMonitor.probes }}
+  {{- include "kube-prometheus-stack.kubelet.endpoint" (list $ "probes") }}
     path: /metrics/probes
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      insecureSkipVerify: true
-    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-{{- if .Values.kubelet.serviceMonitor.probesMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.probesMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.probesRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.probesRelabelings | indent 4) . }}
-{{- end }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.resource }}
-  - port: https-metrics
-    scheme: https
+  {{- end }}
+  {{- if .Values.kubelet.serviceMonitor.resource }}
+  {{- include "kube-prometheus-stack.kubelet.endpoint" (list $ "resource") }}
     path: {{ .Values.kubelet.serviceMonitor.resourcePath }}
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-    tlsConfig:
-      caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-      insecureSkipVerify: true
-    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-{{- if .Values.kubelet.serviceMonitor.resourceMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.resourceMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.resourceRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.resourceRelabelings | indent 4) . }}
-{{- end }}
-{{- end }}
-  {{- else }}
-  - port: http-metrics
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-{{- if .Values.kubelet.serviceMonitor.metricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.relabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.relabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.cAdvisor }}
-  - port: http-metrics
-    path: /metrics/cadvisor
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-{{- if .Values.kubelet.serviceMonitor.cAdvisorMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.cAdvisorMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.cAdvisorRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.cAdvisorRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.probes }}
-  - port: http-metrics
-    path: /metrics/probes
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-{{- if .Values.kubelet.serviceMonitor.probesMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.probesMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.probesRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.probesRelabelings | indent 4) . }}
-{{- end }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.resource }}
-  - port: http-metrics
-    path: {{ .Values.kubelet.serviceMonitor.resourcePath }}
-    {{- if .Values.kubelet.serviceMonitor.interval }}
-    interval: {{ .Values.kubelet.serviceMonitor.interval }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.proxyUrl }}
-    proxyUrl: {{ .Values.kubelet.serviceMonitor.proxyUrl }}
-    {{- end }}
-    {{- if .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    scrapeTimeout: {{ .Values.kubelet.serviceMonitor.scrapeTimeout }}
-    {{- end }}
-    honorLabels: {{ .Values.kubelet.serviceMonitor.honorLabels }}
-    honorTimestamps: {{ .Values.kubelet.serviceMonitor.honorTimestamps }}
-{{- if .Values.kubelet.serviceMonitor.resourceMetricRelabelings }}
-    metricRelabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.resourceMetricRelabelings | indent 4) . }}
-{{- end }}
-{{- if .Values.kubelet.serviceMonitor.resourceRelabelings }}
-    relabelings:
-{{ tpl (toYaml .Values.kubelet.serviceMonitor.resourceRelabelings | indent 4) . }}
-{{- end }}
-{{- end }}
-{{- end }}
+  {{- end }}
+  {{- if .Values.kubelet.serviceMonitor.slis }}
+  {{- include "kube-prometheus-stack.kubelet.endpoint" (list $ "slis") }}
+    path: /metrics/slis
   {{- end }}
   jobLabel: k8s-app
   namespaceSelector:
