[kube-prometheus-stack] add strategy to admission webhook deployment (#4335)

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2195,6 +2195,10 @@ prometheusOperator:
       ##
       replicas: 1
 
+      ## Strategy of the deployment
+      ##
+      strategy: {}
+
       # Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
       podDisruptionBudget: {}
         # maxUnavailable: 1
