remove healthz port
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -205,15 +205,16 @@ spec:
               {{- if .Values.kubeRBACProxy.enableHostPort }}
               hostPort: {{ .Values.service.port }}
               {{- end }}
-            - containerPort: {{ .Values.kubeRBACProxy.healthzPort }}
+            - containerPort: {{ .Values.kubeRBACProxy.proxyEndpointsPort }}
               {{- if .Values.kubeRBACProxy.enableHealthzHostPort }}
-              hostPort: {{ .Values.kubeRBACProxy.healthzPort }}
+              hostPort: {{ .Values.kubeRBACProxy.proxyEndpointsPort }}
               {{- end }}
               name: "http-healthz"
           readinessProbe:
             httpGet:
               scheme: HTTPS
-              port: {{ .Values.kubeRBACProxy.healthzPort }}
+              port: {{ .Values.kubeRBACProxy.proxyEndpointsPort }}
+              path: healthz
             initialDelaySeconds: 5
             timeoutSeconds: 5
           {{- if .Values.kubeRBACProxy.resources }}
