--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -67,9 +67,8 @@ kubeRBACProxy:
   enableHostPort: false
 
   # Configure Proxy Endpoints Port
+  # This is the port being probed for readiness and MUST be set to an open port
   proxyEndpointsPort: 8888
-  # Specify the port to be used for the http-healthz containerPort
-  healthzPort: 8888
   # Configure a hostPort for the http-healthz containerPort. If true, hostPort will be enabled in the container and set to the healthzPort value.
   enableHealthzHostPort: false
 
