update ds with no duplicate port for healthz
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -206,7 +206,7 @@ spec:
               hostPort: {{ .Values.service.port }}
               {{- end }}
             - containerPort: {{ .Values.kubeRBACProxy.proxyEndpointsPort }}
-              {{- if .Values.kubeRBACProxy.enableHealthzHostPort }}
+              {{- if .Values.kubeRBACProxy.enableProxyEndpointsHostPort }}
               hostPort: {{ .Values.kubeRBACProxy.proxyEndpointsPort }}
               {{- end }}
               name: "http-healthz"
