disable kubeproxy from testing
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -38,7 +38,7 @@ global:
 # Configure kube-rbac-proxy. When enabled, creates a kube-rbac-proxy to protect the node-exporter http endpoint.
 # The requests are served through the same service but requests are HTTPS.
 kubeRBACProxy:
-  enabled: true
+  enabled: false
   ## Set environment variables as name/value pairs
   env: {}
     # VARIABLE: value
@@ -70,7 +70,7 @@ kubeRBACProxy:
   # This is the port being probed for readiness and MUST be set to an open port
   proxyEndpointsPort: 8888
   # Configure a hostPort for the http-healthz containerPort. If true, hostPort will be enabled in the container and set to the healthzPort value.
-  enableProxyEndpointsHostPort: true
+  enableProxyEndpointsHostPort: false
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
